# shapetastic

./: README.md  pyproject.toml
notebooks/: shapetastic_50k_cb.ipynb  shapetastic_50k_cb_cs.ipynb  shapetastic_50k_cs.ipynb  shapetastic_50k_gs.ipynb  shapetastic_60k_gs_rot.ipynb  tutorial.ipynb
shapetastic/: __init__.py  shapes.py
