[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapetastic"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{ name = "Bernhard Lehner" }]
maintainers = [{ name = "Bernhard Lehner" }]
description = "Framework for generating reproducable toy datasets."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["dataset", "geometric shapes", "deep learning", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
[tool.setuptools.dynamic]
version = {attr = "shapetastic.VERSION"}

[tool.setuptools.packages.find]
include = [
    "shapetastic*",
]
